# facial-similarity-detection

./: .gitignore  README.md  ResNet.ipynb  eda_combined.ipynb  face_similarity.py  gallery.py  main.py  populate_notebook.py  pyproject.toml  report.md
.github/workflows/: pylint.yml
dataset/splits/: split_config.json
documents/: ResNet_explained.md  ResNet_methodology.md  academic_report.md  academic_report_final.md  lita_academic_report.md  re_review_report.md  report.md  response_to_reviewers.md  review_report.md
eda_outputs/: dataset_summary.csv  image_properties.csv  intra_variation.csv
notebooks/: evaluation.ipynb  gallery_demo.ipynb  olivetti.ipynb
scripts/: eda_combined.py  extract_recordio.py  prepare_splits.py
