[project]
name = "facial-similarity-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "pylint>=4.0.5",
    "ruff>=0.15.17",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "scipy>=1.11",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "pointless-string-statement"
]